# machine

./: .gitignore  README.md  commands.sh
client_ts/: buy_ticket.ts  claim.ts  config.ts  create_campaign.ts  draw.ts  index_check.ts  initialize.ts  instructions.ts  package-lock.json  package.json  schemas.ts  set_manager.ts  show_all_campaigns.ts  transaction.ts  tsconfig.json
keys/: Nft.json  nft_acc.json  owner.json  payer.json  some.json  winner_acc.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs
program/src/processor/: buy_ticket.rs  claim_reward.rs  consts.rs  data_handlers.rs  draw.rs  initialize_account.rs  initialize_campaign.rs  initialize_machine.rs  mod.rs  set_manager.rs  utils.rs
