[package]
name = "example_program"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = "3.2.0"
solana-program = "1.9.29"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"
borsh = "0.9.0"
spl-associated-token-account = {version = "1.0.5", features = [ "no-entrypoint" ]}
borsh-derive = "0.9.0"
chainlink_solana = "1.0.0"

[dev-dependencies]


[lib]
name = "example_program"
crate-type = ["cdylib", "lib"]